--- a/src/styles/CommentCreateEditForm.module.css
+++ b/src/styles/CommentCreateEditForm.module.css
@@ -1,20 +1,43 @@
 .Form {
-    border: none;
-    border-bottom: 2px #00d1ff solid;
-  }
-  
-  .Button {
-    border: none;
-    background-color: #242a3d;
-    color: aliceblue;
-    border-radius: 100px;
-    padding: 4px 10px;
-    min-width: 75px;
-    margin: 5px;
-  }
-  
-  .Button:hover {
-    cursor: pointer;
-    background-color: aliceblue;
-    color: #242a3d;
-  }
+  border: none;
+  border-bottom: 2px #00d1ff solid;
+}
+
+.Button {
+  border: none;
+  background-color: #242a3d;
+  color: aliceblue;
+  border-radius: 100px;
+  padding: 4px 10px;
+  min-width: 75px;
+  margin: 5px;
+}
+
+.Button:hover {
+  cursor: pointer;
+  background-color: aliceblue;
+  color: #242a3d;
+}
+
+/* Styles for MentionsInput */
+.mentionsInput {
+  font-size: 16px;
+  font-weight: normal;
+  padding: 8px;
+  border-radius: 4px;
+  border-color: #ced4da;
+  min-height: 80px;
+  width: 100%;
+}
+
+.mentionHighlight {
+  background-color: #d1c4e9;
+}
+
+.inputControl {
+  margin: 0;
+}
+
+.highlighter {
+  overflow: hidden;
+}
