the username is appearing on the top

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,7 +1,7 @@
 .NavBar {
-    background-color: #ffffff;
-    border: 1px solid #dadadf;
-  }
+  background-color: #ffffff;
+  border: 1px solid #dadadf;
+}
 
 .NavLink {
   padding: 5px;
@@ -9,4 +9,11 @@
 
 .Active i {
   color: blue;
+}
+
+/* Optional addition for styling the username */
+.Username {
+  margin-left: 8px;
+  font-weight: 500;
+  color: #333;
 }
